# delphi-parser

./: .gitignore  Delphi 5 help grammar.txt  README.md  constant-expression.ebnf  delphi-5-progress.ebnf  delphi-5.ebnf  delphi-6.bnf  delphi-parser.cabal  delphi.ebnf  original.bnf  stack.yaml
src/Language/: Delphi.hs
src/Language/Delphi/: AST.hs  Code.hs  Parser.hs
test/: Spec.hs
